--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -43,7 +43,7 @@
                         Este campo es obligatorio
                       </mat-error>
                       <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.pattern">
-                        Debe ser una Guia Master
+                        Carácteres no permitidos
                       </mat-error>                    
                   </mat-form-field>                 
                 </div>
