--- a/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
+++ b/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
@@ -17,6 +17,18 @@
       <form #detailUserForm="ngForm" class="input-full-width">
         <div class="col-md-12">
           <div class="row">
+            <div class="col-md-4">
+              <mat-form-field class="input-full-width">
+                <input matInput type="text" disabled="true" [(ngModel)]="detailUser.ClavePatente" >
+              </mat-form-field>
+            </div>
+            <div class="col-md-4">
+              <mat-form-field class="input-full-width">
+                <input type="text" matInput disabled="true" [(ngModel)]="detailUser.RazonSocial">
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="row">
             <div title="Click para editar" (click)="edit()" tabindex="0" class="input-full-width col-md-12">
               Nombre Completo &nbsp;&nbsp;&nbsp; <i class="cui-pencil"></i>
             </div>
