--- a/src/app/aaacesa/bitacoras/bitacoras.component.html
+++ b/src/app/aaacesa/bitacoras/bitacoras.component.html
@@ -13,7 +13,7 @@
             <!-- busqueda rango fechas -->
             <div class="col-lg-3 mb-1 invalid--no-color">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="rangoFechaSearch" #fechaSearch bsDaterangepicker [bsConfig]="{ rangeInputFormat : 'DD-MM-YYYY' }" placement="right top" class="rangoFecha" placeholder="Rango de Fecha">
+                <input matInput type="text" [(ngModel)]="rangoFechaSearch" #fechaSearch bsDaterangepicker placement="right top" class="rangoFecha" placeholder="Rango de Fecha">
               </mat-form-field>
             </div>
 
