--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -28,7 +28,7 @@
 
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" #dp="bsDatepicker" bsDatepicker [(ngModel)]="fechaPrevioSearch" placeholder="Fecha Arribo">                
+                <input matInput type="text" #dp="bsDatepicker" bsDatepicker [(ngModel)]="fechaPrevioSearch" [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY' }" placeholder="Fecha Arribo">                
               </mat-form-field>
             </div>
 
